--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
@@ -15,10 +16,13 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "g": "^2.0.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongodb": "^4.12.1",
-    "morgan": "~1.9.1",
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
